@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX wmaker.desktop 221 RMD160 501ba6451f7e756cc3d07682d728bcd6fe55366d SHA1 acd95a41645fbef358459f8f4753056cb321497e SHA256 40359d3c61117f0dbc5eb547e4c369982427e8bc3174c95002d34eb30f9a4a84
 DIST WindowMaker-extra-0.1.tar.gz 238018 RMD160 94334c2c12d20a8fd0cd2a70e54cd3689f043038 SHA1 80f34cb3af705ec0f79d727b82cef28ee50fc4e7 SHA256 acd6e1fb790485b107daf2b710da372367b41383c55d9c8bdfdac521d850edc4
-EBUILD windowmaker-crm-9999.ebuild 2960 RMD160 f669c830168f4603864da326397f0e8a58045c1c SHA1 1d9d7a8db4ce916b340168631c8b9c6872e96826 SHA256 0616dc9f06d80585c3205493cffd0e3b120eaa7de7eacadf86b69d4b66c77f06
-MISC ChangeLog 509 RMD160 710aff6b0f74226a893d4c5fdffad3c3fef91aa4 SHA1 5aa625742f7be8ca72c19ad9a28d9877e7fecf24 SHA256 441b049051e9207604ae166f228c60bb832f9762027359d20d2ae4a0e9ec9d7d
-MISC metadata.xml 455 RMD160 41514c712d553ed4752ce045efca3d27dd036c19 SHA1 345b35512a60f3d19cf5fc4cebbfe30bd6006bf3 SHA256 7661636f854da151e83478668ff58943b0d80662f6abd2a209707d3d34b37c7c
+EBUILD windowmaker-crm-9999.ebuild 2663 RMD160 d4959318023a7fe7454774673f648fe327a82dcc SHA1 9bee977639d84f7852b10738c18c8f236232819e SHA256 894a30be8ab8bc0af0eea493af2a4c34109b408dcb2bbc2a3a7cf0c3a0c0519f
+MISC ChangeLog 653 RMD160 184f87bc0c88cdabae0b68b18300ab383efc21dd SHA1 ee95127055080c52727aff780f207e4b365168c6 SHA256 6e58302d9c937e6bebe53f72cfa2022550139d57de5d5acfa3e610dc2cd986ea
+MISC metadata.xml 394 RMD160 b38936f0ba7b057fb41eeab348514bc1ee5a9b29 SHA1 c6207f10ee5f811733c721277dbe9fabe3d16ead SHA256 1b7d1d11e92f67acd47aa9243ae010ea48f55c631fa6b43b025b368b8c03a9ee
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iF4EAREIAAYFAk81OgkACgkQFYEBGcdFJfKbkQD+J+T4xvjS9NrvUS7YV2z/aJlK
+Rz5HG5fNjzSoYpKdR2cBAJKgg/mdijzVgiusqbk+zU8dDjvo4CvxKFBRZJ1AkuEk
+=l4zZ
+-----END PGP SIGNATURE-----
