@@ -6,7 +6,6 @@
 		<flag name='modelock'>Enable XKB language status lock support. README
 			says: "If you don't know what it is you probably don't need
 			it."</flag>
-		<flag name='vdesktop'>Enable dynamic virtual desktop (conflicts with
-			software that works on the edges of the screen)</flag>
+		<flag name='xrandr'>Enable XRandR window extension support</flag>
 	</use>
 </pkgmetadata>
