@@ -1,30 +1,31 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=3
+EAPI=4
+inherit autotools git-2
 
-inherit autotools git
-
-DESCRIPTION="Fork from the last available CVS version of Window Maker"
-HOMEPAGE="http://repo.or.cz/w/wmaker-crm.git"
-SRC_URI="http://www.windowmaker.info/pub/source/release/WindowMaker-extra-0.1.tar.gz"
+DESCRIPTION="The fast and light GNUstep window manager"
+HOMEPAGE="http://www.windowmaker.org/"
+SRC_URI="http://www.windowmaker.org/pub/source/release/WindowMaker-extra-0.1.tar.gz"
 EGIT_REPO_URI="git://repo.or.cz/wmaker-crm.git"
 
+SLOT="0"
 LICENSE="GPL-2"
 SLOT="0"
+IUSE="gif jpeg nls png tiff modelock xinerama +xrandr"
 KEYWORDS=""
-IUSE="gif jpeg nls png tiff modelock +vdesktop xinerama"
 
-DEPEND="x11-libs/libXv
+DEPEND="media-libs/fontconfig
 	>=x11-libs/libXft-2.1.0
 	x11-libs/libXt
-	media-libs/fontconfig
+	x11-libs/libXv
 	gif? ( >=media-libs/giflib-4.1.0-r3 )
-	png? ( >=media-libs/libpng-1.2.1 )
+	png? ( media-libs/libpng:0 )
 	jpeg? ( virtual/jpeg )
-	tiff? ( >=media-libs/tiff-3.6.1-r2 )
-	xinerama? ( x11-libs/libXinerama )"
+	tiff? ( media-libs/tiff:0 )
+	xinerama? ( x11-libs/libXinerama )
+	xrandr? ( x11-libs/libXrandr )"
 RDEPEND="${DEPEND}
 	!x11-wm/windowmaker
 	nls? ( >=sys-devel/gettext-0.10.39 )"
@@ -33,10 +34,11 @@ src_unpack() {
 	# wm-extras
 	unpack ${A}
 
-	git_src_unpack
+	git-2_src_unpack
 }
 
 src_prepare() {
+	# Fix some paths
 	for file in "${S}"/WindowMaker/*menu*; do
 		if [[ -r $file ]] ; then
 			sed -i -e "s:/usr/local/GNUstep/Applications/WPrefs.app:${EPREFIX}/usr/bin/:g;" "$file" || die
@@ -45,7 +47,7 @@ src_prepare() {
 		fi;
 	done;
 
-	eautoreconf || die "eautoreconf failed"
+	eautoreconf
 }
 
 src_configure() {
@@ -56,16 +58,13 @@ src_configure() {
 	myconf="--enable-xpm $(use_enable png) $(use_enable jpeg) $(use_enable gif) $(use_enable tiff)"
 
 	# non required X capabilities
-	myconf="${myconf} $(use_enable modelock) $(use_enable xinerama)"
+	myconf="${myconf} $(use_enable modelock) $(use_enable xrandr) $(use_enable xinerama)"
 
 	if use nls; then
 		[[ -z $LINGUAS ]] && export LINGUAS="`ls po/*.po | sed 's:po/\(.*\)\.po$:\1:'`"
 	else
 		myconf="${myconf} --disable-locale"
 	fi
-
-	# enable new features, need to be done via defines
-	append-flags -DNEWAPPICON
 
 	# default settings with $myconf appended
 	econf \
@@ -74,28 +73,28 @@ src_configure() {
 		--enable-usermenu \
 		--with-pixmapdir="${EPREFIX}"/usr/share/pixmaps \
 		--with-nlsdir="${EPREFIX}"/usr/share/locale \
-		${myconf} || die
+		${myconf}
 	cd ../WindowMaker-extra-0.1
-	econf || die "windowmaker-extra: configure has failed"
+	econf
 }
 
 src_compile() {
-	emake || die "windowmaker: make has failed"
+	emake
 
 	# WindowMaker Extra Package (themes and icons)
 	cd ../WindowMaker-extra-0.1
-	emake || die "windowmaker-extra: make has failed"
+	emake
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "windowmaker: install has failed."
+	emake DESTDIR="${D}" install
 
-	dodoc AUTHORS BUGFORM BUGS ChangeLog COPYING* INSTALL* FAQ* \
+	dodoc AUTHORS BUGFORM BUGS ChangeLog INSTALL* FAQ* \
 		  README* NEWS TODO
 
 	# WindowMaker Extra
 	cd ../WindowMaker-extra-0.1
-	emake DESTDIR="${D}" install || die "windowmaker-extra: install failed"
+	emake DESTDIR="${D}" install
 
 	newdoc README README.extra
 
@@ -105,7 +104,7 @@ src_install() {
 	exeinto /etc/X11/Sessions/
 	doexe wmaker
 
-	insinto /etc/X11/dm/Sessions
+	insinto /usr/share/xsessions
 	doins "${FILESDIR}"/wmaker.desktop
 	make_desktop_entry /usr/bin/wmaker
 }
